# Operating-Systems

./: .gitignore  CMakeLists.txt  README.md  todo.txt
Bash/Lab_1/: skrypt.sh  skrypt10.sh  skrypt11.sh  skrypt12.sh  skrypt13.sh  skrypt14.sh  skrypt2.sh  skrypt3.sh  skrypt4.sh  skrypt5.sh  skrypt6.sh  skrypt7.sh  skrypt8.sh  skrypt9.sh  sprawdzanie.sh
Multithreading/Task1/: CMakeLists.txt
Multithreading/Task1/include/: ball.hpp  direction.hpp  window.hpp
Multithreading/Task1/src/: ball.cpp  direction.cpp  main.cpp  window.cpp
Multithreading/Task2/: CMakeLists.txt
Multithreading/Task2/include/: ball.hpp  window.hpp
Multithreading/Task2/src/: ball.cpp  main.cpp  main_handler.cpp  window.cpp
Task1/: CMakeLists.txt
Task1/include/: ball.hpp  window.hpp
Task1/src/: ball.cpp  window.cpp
Task2/: CMakeLists.txt
Task2/include/: main_handler.hpp
Task2/src/: ball.cpp  main.cpp  main_handler.cpp
Task3/include/: airplane.hpp  control_tower.hpp  flight_generator.hpp  incoming_airplane.hpp  outgoing_airplane.hpp  priority.hpp  route.hpp  utils.hpp  window.hpp
Task3/src/: control_tower.cpp  flight_generator.cpp  incoming_airplane.cpp  main.cpp  outgoing_airplane.cpp  utils.cpp  window.cpp
